<resources>
    <string name="app_name">Codey</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_materi">Material</string>
    <string name="title_latihan">Exercise</string>
    <string name="title_profile">Profile</string>

    <string name="judul_materi">Judul Materi</string>
    <string name="judul_latihan">Judul Latihan</string>

    <!--PROFILE-->
    <string name="nama_user">Name User</string>
    <string name="email_user">Email</string>
    <string name="activity">Youre Activity Learning</string>
    <string name="logout">Logout</string>

    <!-- EDIT PROFILE-->
    <string name="edit_nama">Name</string>
    <string name="edit_password">Password</string>
    <string name="edit_button">Change Profile</string>

    <!--LOGIN REGISTER-->
    <string name="judul_login">Login</string>
    <string name="judul_signup">Signup</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="redirect_to_signup">Not yet registered? Signup</string>
    <string name="redirect_to_login">Already registered? Login</string>

    <!--HOME FRAGMENT-->
    <string name="textHome">Knowledge\nis power</string>
    <string name="textHome1">Knowledge is power</string>
    <string name="isi">Knowledge\nis power</string>
    <string name="zbook_description">Cover of the ZBook</string>
    <string name="zgambar1_description">Image 1 description</string>
    <string name="zgambar2_description">Image 2 description</string>
    <string name="zgambar3_description">Image 3 description</string>
    <string name="zgambar4_description">Image 4 description</string>

    <!--LATIHAN-->
    <string name="btnNext">Next</string>
    <string name="jawaban">Enter your answer</string>
    <string name="soal">The question will be displayed here</string>
    <string name="instruksi">Instruction will appear here</string>

    <!--RESULT-->
    <string name="hasil">Quiz Result</string>
    <string name="btnResult">Back to exercise</string>
    <string name="score">Your score: 0.00</string>
    <string name="rekomendasi">Recommendations will appear here.</string>

</resources>