<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="10dp"
                android:text="Get Your \nBest Course Today!"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="200dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/zgambar1"
                        android:contentDescription="@string/zgambar1_description" />

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="200dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/zgambar2"
                        android:contentDescription="@string/zgambar2_description" />

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="200dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/zgambar3"
                        android:contentDescription="@string/zgambar3_description" />

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="200dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/zgambar4"
                        android:contentDescription="@string/zgambar4_description" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18sp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="Recommended Course:"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:layout_width="390dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="13dp"
                        app:cardBackgroundColor="#F8F7F3"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/zread"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5sp"
                                android:text="introduction to Python"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="390dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="13dp"
                    app:cardBackgroundColor="#F8F7F3"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/zread"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5sp"
                            android:text="Data Types"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="390dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="13dp"
                    app:cardBackgroundColor="#F8F7F3"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/zread"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5sp"
                            android:text="Object-Oriented Programming (OOP)"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
